app/main/default/objects/agf__ADM_Work_Commitment__c/fields/agf__Committed_Story_Points__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>agf__Committed_Story_Points__c</fullName>
        <description>Number of story points assigned to work item when it was committed to in this sprint</description>
        <inlineHelpText>Number of story points assigned to work item when it was committed to in this sprint</inlineHelpText>
        <label>Committed Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>